--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="author" content="erick p joshy" />
+    <meta name="googlebot" content="erick p joshy, mebdoctortech" />
+    <meta name="google" content="erick p joshy" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="description" content="erick p joshy portpfolio" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Erick P Joshy</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
