--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="googlebot" content="erick p joshy, mebdoctortech" />
     <meta name="google" content="erick p joshy" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta
+      name="google-site-verification"
+      content="dyLu57aIKnuXj22AzPc1zIswrpiIQWDot6DvMaUoJsw"
+    />
     <meta name="description" content="erick p joshy portpfolio" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
