--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      alt="mebdoctortechlogo"
+      href="/mebdoctortechlogo.png"
+    />
     <meta name="author" content="erick p joshy" />
     <meta name="googlebot" content="erick p joshy, mebdoctortech" />
     <meta name="google" content="erick p joshy" />
